--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zendeskgarden/react-buttons": "^3.7.0",
+    "@zendeskgarden/react-theming": "^3.2.1",
+    "@zendeskgarden/svg-icons": "^5.0.0",
     "node-sass": "^4.9.4",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
