--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "cssnano": "^4.1.5"
   }
 }
